@@ -236,6 +236,8 @@ To insert a signature file automatically, call the function
     ("application"
      ("octet-stream" ("type" "" "tar" "shar"))
      ("postscript")
+     ("msword")
+     ("vnd.ms-excel")
      ("vnd.ms-powerpoint")
      ("x-kiss" ("x-cnf")))
     ("image"
@@ -318,6 +320,11 @@ To insert a signature file automatically, call the function
 
     ("\\.doc$"				;MS Word
      "application" "msword" nil
+     "base64"
+     "attachment" (("filename" . file))
+     )
+    ("\\.xls$"				; MS Excel
+     "application" "vnd.ms-excel" nil
      "base64"
      "attachment" (("filename" . file))
      )
