@@ -1,3 +1,9 @@
+2004-04-04  Yoichi NAKAYAMA  <yoichi@geiin.org>
+
+	* mime-edit.el (mime-file-types): Add application/vnd.ms-excel.
+	(mime-content-types): Add application/vnd.ms-excel and
+	application/msword.
+
 2004-02-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
 
 	* mime-image.el (mime-display-image): Ignore errors about image
